A Claude AI ported prototype.